[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/ActionButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://LevelScreens/Level4.gd" type="Script" id=3]
[ext_resource path="res://Buttons/b_pone_sword.gd" type="Script" id=4]
[ext_resource path="res://Buttons/b_restore.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "anim_level4"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Level4:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "L", "Le", "Lev", "Leve", "Level", "Level 4", "C", "Ch", "Cho", "Choo", "Choos", "Choose", "Choose W", "Choose Wi", "Choose Wis", "Choose Wise", "Choose Wisel", "Choose Wisely", "Choose Wisely.", "Choose Wisely..", "Choose Wisely..." ]
}

[node name="Level4" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 1 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Label" parent="CenterContainer"]
margin_left = 41.0
margin_top = 74.0
margin_right = 49.0
margin_bottom = 86.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer"]
anims/anim_level4 = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
margin_left = 7.73526
margin_top = 106.412
margin_right = 82.7353
margin_bottom = 146.412
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b_pone_sword" parent="GridContainer" instance=ExtResource( 2 )]
margin_right = 74.0
margin_bottom = 13.0
text = "+1 SWORD DAMAGE "
script = ExtResource( 4 )

[node name="b_restore" parent="GridContainer" instance=ExtResource( 5 )]
margin_top = 17.0
margin_right = 74.0
margin_bottom = 30.0
text = "Restore Health"
[connection signal="finished" from="GridContainer/b_pone_sword" to="." method="_on_b_pone_sword_finished"]
[connection signal="finished" from="GridContainer/b_restore" to="." method="_on_b_restore_finished"]
